--- a/nbs/session04_inclass_ak.ipynb
+++ b/nbs/session04_inclass_ak.ipynb
@@ -4150,8 +4150,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "pygments_lexer": "ipython3"
   },
   "vscode": {
    "interpreter": {
