--- a/nbs/session06_inclass_ak.ipynb
+++ b/nbs/session06_inclass_ak.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "377bfa0c-a4fc-4b31-9e20-aeba254db6d5",
    "metadata": {
     "execution": {
@@ -35,6 +35,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import gensim\n",
     "import gensim.downloader\n",
     "import matplotlib.pyplot as plt\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2ed41b0a-a40c-4bc5-b98a-e87d79c05d0a",
    "metadata": {
     "execution": {
@@ -75,7 +76,17 @@
    "outputs": [],
    "source": [
     "# English and Danish embeddings http://vectors.nlpl.eu/repository/ (English CoNLL17 corpus)\n",
-    "model = gensim.models.KeyedVectors.load(\"path/to/shared/drive\")"
+    "model_path = os.path.join(\n",
+    "    \"..\",\n",
+    "    \"..\",\n",
+    "    \"..\",\n",
+    "    \"431868\",\n",
+    "    \"word2vec_models\",\n",
+    "    \"english\",\n",
+    "    \"english_word2vec.bin\")\n",
+    "\n",
+    "model = gensim.models.KeyedVectors.load(\n",
+    "    model_path)"
    ]
   },
   {
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2cd074b4-23ee-4d70-afc8-db85bd53e904",
    "metadata": {
     "execution": {
@@ -114,9 +125,29 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Offensive', 0.6881201267242432),\n",
+       " ('defensive', 0.6814680099487305),\n",
+       " ('offensively', 0.6033428907394409),\n",
+       " ('offense', 0.599240779876709),\n",
+       " ('coach_Bob_Palcic', 0.5828719735145569),\n",
+       " ('guard_RJ_Mattes', 0.5772352814674377),\n",
+       " ('coach_Jimmy_Heggins', 0.5609467029571533),\n",
+       " ('promoted_Pete_Metzelaars', 0.5550139546394348),\n",
+       " ('Dave_Borbely', 0.5501905679702759),\n",
+       " ('coach_George_Yarno', 0.5471348762512207)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.most_similar(\"leaves\")"
+    "model.most_similar(\"offensive\")"
    ]
   },
   {
@@ -141,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8b476719-0cc1-4da2-bdd9-98bd22bd48e2",
    "metadata": {
     "execution": {
@@ -153,14 +184,25 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42315673828125"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.distance(\"happy\", \"sad\")"
+    "model.distance(\"long\", \"short\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "72d9efe2-809f-4944-9e6d-a9c735ccc4ff",
    "metadata": {
     "execution": {
@@ -172,9 +214,21 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5154392421245575"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.distance(\"happy\",\"cheerful\")"
+    "model.distance(\"long\", \"lengthy\")\n",
+    "# Could the counter-intuitive result happen due to word and antonym being more common than the synonym?"
    ]
   },
   {
@@ -188,12 +242,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6ed87ba7-851c-42bb-91a1-0033c6ebaa79",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.distance(\"happy\", \"sad\") < model.distance(\"happy\",\"cheerful\")"
+    "model.distance(\"happy\", \"sad\") < model.distance(\"happy\", \"cheerful\") # boolean"
    ]
   },
   {
@@ -219,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e97f38cc-a6a6-4d54-a0ef-97b90bef4140",
    "metadata": {
     "execution": {
@@ -231,10 +296,22 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('queen', 0.7118193507194519)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.most_similar(positive=['king', 'woman'], \n",
-    "                   negative=['man'])[0]"
+    "model.most_similar(\n",
+    "    positive = ['king', 'woman'],\n",
+    "    negative = ['man'])[0]"
    ]
   },
   {
@@ -243,6 +320,110 @@
    "metadata": {},
    "source": [
     "Try to find at least three analogies which correctly hold - where \"correctly\" here means that the closest vector corresponds to the word that you as a native speaker think it should."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c03a27ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Denmark', 0.6773968935012817)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(\n",
+    "    positive = ['Sweden', 'Copenhagen'],\n",
+    "    negative = ['Stockholm'])[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bc4c2919",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('breakfast', 0.7007347941398621)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(\n",
+    "    positive = ['dinner', 'morning'],\n",
+    "    negative = ['evening'])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ee4588e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Japan', 0.5714432001113892)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(\n",
+    "    positive = ['Italy', 'sushi'],\n",
+    "    negative = ['pizza'])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f948d419",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('croque_monsieur', 0.609980583190918)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(\n",
+    "    positive = ['sushi', 'France'],\n",
+    "    negative = ['Japan'])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8bec428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.most_similar(\n",
+    "    positive = ['Rihanna', 'Copenhagen'],\n",
+    "    negative = ['Stockholm'])[0]"
    ]
   },
   {
@@ -397,11 +578,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.2 (default, Feb 28 2021, 17:03:44) \n[GCC 10.2.1 20210110]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
    }
   }
  },
