--- a/nbs/session08_inclass_AK.ipynb
+++ b/nbs/session08_inclass_AK.ipynb
@@ -87,7 +87,7 @@
     "        token_list = tokenizer.texts_to_sequences([line])[0]\n",
     "        # for each token, find the token that comes after it\n",
     "        # add to list\n",
-    "        # (thereby you have a nice list with input words and word that can\n",
+    "        # (thereby you have a nice list with input words and words that can\n",
     "        # come after them)\n",
     "        for i in range(1, len(token_list)):\n",
     "            n_gram_sequence = token_list[:i+1]\n",
